#7594 bug(style): removes overflow: hidden; from grid-cell

--- a/src/components/Grid/Cell/_grid-cell.scss
+++ b/src/components/Grid/Cell/_grid-cell.scss
@@ -12,7 +12,6 @@
   // Ensures .grid__cell will not expand beyond it's designated
   // column boundaries
   max-width: 100%;
-  overflow: hidden;
 
   // IE row placement fix
   @include mq($until: md) {
